fix: correct overflows and some style

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -70,6 +70,9 @@
     --font-caption: 0.8em;
     --font-tiny: 0.64em;
   }
+
+  --z-index-header: 2;
+  --z-index-sidebar: 2;
 }
 @font-face {
   font-family: JetBrainsMono;
@@ -242,6 +245,7 @@ input {
 }
 .icon-button{
   background-color: transparent;
+  cursor: pointer;
   border: none;
   &:hover{
     color: var(--accent-600);
@@ -270,7 +274,7 @@ button:not(.icon-button), .button:not(.icon-button) {
 
   &.lg {
       padding: 17px 40px;
-      font-size: var(--font-h4);  
+      font-size: var(--font-h6);  
   }
 
   &:hover {
